--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,15 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+typings
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+
+#pures js
+**/*.js
+**/*.js.map
