--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jade": "~1.11.0",
     "mongodb": "^2.2.10",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "xml4js": "^0.1.3"
   },
   "devDependencies": {
     "typescript": "^2.0.3",
