--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rxjs": "^5.0.0-rc.1",
     "serve-favicon": "~2.3.0",
     "systemjs": "^0.19.39",
-    "xmldom": "^0.1.22"
+    "xmldom": "^0.1.22",
+    "sii-dtes": "git://github.com/DiegoMajluf/SII-DTEs.git"
   },
   "devDependencies": {
     "typescript": "^2.0.3",
