--- a/package.json
+++ b/package.json
@@ -12,6 +12,21 @@
     "postinstall": "typings install && tsc"
   },
   "dependencies": {
+    "@angular/common": "~2.2.0",
+    "@angular/compiler": "~2.2.0",
+    "@angular/core": "~2.2.0",
+    "@angular/forms": "~2.2.0",
+    "@angular/http": "~2.2.0",
+    "@angular/platform-browser": "~2.2.0",
+    "@angular/platform-browser-dynamic": "~2.2.0",
+    "@angular/router": "~3.2.0",
+    "@angular/upgrade": "~2.2.0",
+
+    "angular-in-memory-web-api": "~0.1.15",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",    
+    "zone.js": "^0.6.25",
+
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "dateformat": "^1.0.12",
@@ -20,13 +35,17 @@
     "google-closure-library": "^20161024.0.0",
     "mongodb": "^2.2.10",
     "morgan": "~1.7.0",
-    "rxjs": "^5.0.0-rc.1",
+    "rxjs": "^5.0.0-beta.12",
     "serve-favicon": "~2.3.0",
     "systemjs": "^0.19.39",
     "xmldom": "^0.1.22",
     "sii-dtes": "git://github.com/DiegoMajluf/SII-DTEs.git"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.45",
+    "concurrently": "^3.0.0",
+    "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
     "typings": "^2.0.0"
   }
