--- a/package.json
+++ b/package.json
@@ -14,29 +14,30 @@
     "postinstall": "typings install && tsc"
   },
   "dependencies": {
-    "@angular/common": "~2.2.0",
-    "@angular/compiler": "~2.2.0",
-    "@angular/core": "~2.2.0",
-    "@angular/forms": "~2.2.0",
-    "@angular/http": "~2.2.0",
-    "@angular/platform-browser": "~2.2.0",
-    "@angular/platform-browser-dynamic": "~2.2.0",
-    "@angular/router": "~3.2.0",
-    "@angular/upgrade": "~2.2.0",
-    "angular-in-memory-web-api": "~0.1.15",
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
+    "@angular/common": "^2.2.0",
+    "@angular/compiler": "^2.2.0",
+    "@angular/core": "^2.2.0",
+    "@angular/forms": "^2.2.0",
+    "@angular/http": "^2.2.0",
+    "@angular/platform-browser": "^2.2.0",
+    "@angular/platform-browser-dynamic": "^2.2.0",
+    "@angular/router": "^3.2.0",
+    "@angular/upgrade": "^2.2.0",
+    "angular-in-memory-web-api": "^0.1.15",
+    "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "core-sales-manager": "git://github.com/DiegoMajluf/coreSalesManager.git",
     "dateformat": "^1.0.12",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
     "mongodb": "^2.2.10",
-    "morgan": "~1.7.0",
+    "morgan": "^1.7.0",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "^5.2.0",
+    "serve-favicon": "^2.3.0",
     "systemjs": "^0.19.39",
-    "serve-favicon": "~2.3.0",
-    "core-sales-manager": "git://github.com/DiegoMajluf/coreSalesManager.git"
+    "zone": "^0.3.4"
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
