--- a/package.json
+++ b/package.json
@@ -8,64 +8,49 @@
   },
   "private": true,
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "lite": "lite-server",
-    "tsc:w": "tsc -w",
-    "postinstall": "typings install && tsc"
+    "start": "webpack-dev-server --inline --progress --port 3210",
+    "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "^2.2.0",
-    "@angular/compiler": "^2.2.0",
-    "@angular/core": "^2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@angular/http": "^2.2.0",
-    "@angular/platform-browser": "^2.2.0",
-    "@angular/platform-browser-dynamic": "^2.2.0",
-    "@angular/router": "^3.2.0",
-    "@angular/upgrade": "^2.2.0",
-    "angular-in-memory-web-api": "^0.1.15",
+    "@angular/common": "^4.1.1",
+    "@angular/compiler": "^4.1.1",
+    "@angular/core": "^4.1.1",
+    "@angular/forms": "^4.1.1",
+    "@angular/http": "^4.1.1",
+    "@angular/platform-browser": "^4.1.1",
+    "@angular/platform-browser-dynamic": "^4.1.1",
+    "@angular/router": "^4.1.1",
+    "@angular/upgrade": "^4.1.1",
     "body-parser": "^1.15.1",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "core-sales-manager": "git://github.com/DiegoMajluf/coreSalesManager.git",
     "dateformat": "^1.0.12",
     "debug": "^2.2.0",
     "express": "^4.13.4",
+    "jquery": "^3.2.1",
     "mongodb": "^2.2.10",
     "morgan": "^1.7.0",
-    "reflect-metadata": "^0.1.8",
     "rxjs": "^5.2.0",
     "serve-favicon": "^2.3.0",
-    "systemjs": "^0.19.39",
     "zone": "^0.3.4"
   },
   "devDependencies": {
-    "concurrently": "^3.0.0",
-    "jspm": "^0.16.48",
-    "lite-server": "^2.2.2"
-  },
-  "jspm": {
-    "dependencies": {
-      "@angular/common": "npm:@angular/common@^2.2.3",
-      "@angular/compiler": "npm:@angular/compiler@^2.2.3",
-      "@angular/core": "npm:@angular/core@^2.2.3",
-      "@angular/forms": "npm:@angular/forms@^2.2.3",
-      "@angular/http": "npm:@angular/http@^2.2.3",
-      "@angular/platform-browser": "npm:@angular/platform-browser@^2.2.3",
-      "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.2.3",
-      "@angular/router": "npm:@angular/router@^3.2.3",
-      "@angular/upgrade": "npm:@angular/upgrade@^2.2.3",
-      "angular-in-memory-web-api": "npm:angular-in-memory-web-api@^0.1.16",
-      "core-sales-manager": "github:DiegoMajluf/coreSalesManager@master",
-      "reflect-metadata": "npm:reflect-metadata@^0.1.8",
-      "zone.js": "npm:zone.js@^0.7.2"
-    },
-    "devDependencies": {
-    },
-    "overrides": {
-      "github:DiegoMajluf/coreSalesManager@master": {
-        "registry": "npm"
-      }
-    }
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.1.3",
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "json-loader": "^0.5.4",
+    "null-loader": "^0.1.1",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.17.0",
+    "typescript": "^2.3.2",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "^4.1.0"
   }
 }
