--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.2.1",
     "mongodb": "^2.2.10",
     "morgan": "^1.7.0",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.2.0",
     "serve-favicon": "^2.3.0",
     "zone": "^0.3.4"
