--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "zone": "^0.3.4"
   },
   "devDependencies": {
+    "@types/webpack": "^2.2.16",
+    "@types/webpack-dev-middleware": "^1.9.1",
+    "@types/webpack-hot-middleware": "^2.15.0",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.1",
@@ -51,7 +54,9 @@
     "style-loader": "^0.17.0",
     "typescript": "^2.3.2",
     "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   }
 }
