--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 3210",
-    "postinstall": "typings install"
+    "start": "webpack-dev-server --inline --progress --port 3210"
   },
   "dependencies": {
     "@angular/common": "^4.1.1",
@@ -35,12 +34,25 @@
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.2.0",
     "serve-favicon": "^2.3.0",
-    "zone": "^0.3.4"
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.16.3",
+    "@types/cookie-parser": "^1.3.30",
+    "@types/dateformat": "^1.0.1",
+    "@types/express": "^4.0.36",
+    "@types/express-debug": "^1.1.30",
+    "@types/express-serve-static-core": "^4.0.48",
+    "@types/google.visualization": "0.0.34",
+    "@types/mongodb": "^2.2.6",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^7.0.31",
+    "@types/serve-favicon": "^2.2.28",
+    "@types/serve-static": "^1.7.31",
     "@types/webpack": "^2.2.16",
     "@types/webpack-dev-middleware": "^1.9.1",
     "@types/webpack-hot-middleware": "^2.15.0",
+    "@types/xmldom": "^0.1.29",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.1",
