--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dateformat": "^1.0.12",
     "debug": "^2.2.0",
     "express": "^4.13.4",
+    "has-flag": "^2.0.0",
     "jquery": "^3.2.1",
     "mongodb": "^2.2.10",
     "morgan": "^1.7.0",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.16.3",
     "@types/cookie-parser": "^1.3.30",
+    "@types/core-js": "^0.9.41",
     "@types/dateformat": "^1.0.1",
     "@types/express": "^4.0.36",
     "@types/express-debug": "^1.1.30",
