--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,13 @@
     "experimentalDecorators": true,
     "removeComments": true,
     "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "lib": [
+      "es2015",
+      "dom"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   }
 }
