--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 3210"
+    "start": "node app"
   },
   "dependencies": {
     "@angular/common": "^4.1.1",
